--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "jane/runtime": "dev-master",
+        "jane/runtime": "^1.0",
         "symfony/property-access": "^2.3|^3.0",
         "symfony/console": "^2.3|^3.0",
         "nikic/php-parser": "^1.4|^2.0|^3.0",
